[package]
name = "softfloat-wrapper"
version = "0.5.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/softfloat-wrapper"
keywords = ["softfloat"]
categories = ["api-bindings", "mathematics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a safe wrapper of Berkeley SoftFloat based on softfloat-sys"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables conversion from and into native float types
native-float = []
# Enables soft F128 type
f128 = []

[dependencies]
num-traits = "0.2.12"

[dependencies.softfloat-sys]
git = "https://github.com/tacanslabs/softfloat-sys.git"
rev = "6a844bd991bb260e5b73b9980a233c598e6e7f3c"

[dev-dependencies]
simple-soft-float = "0.1.0"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "softfloat-wrapper = \"[a-z0-9\\.-]+\"", replace = "softfloat-wrapper = \"{{version}}\""},
    {file = "README.md", search = "version = \"[a-z0-9\\.-]+\"", replace = "version = \"{{version}}\""},
]
